# cube

./: CMakeLists.txt  cube.c
lib/: mathTeste.h
